# stm_trionic

./: .gitmodules  .~lock.injector_perf.ods#  CMakeLists.txt  foo.map  injector_perf.ods  launch.sh  openocd.cfg
include/: FreeRTOS.hpp
libs/: CMakeLists.txt  sys_heap.c
libs/SystemView/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
libs/SystemView/SEGGER/: SEGGER_RTT.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h
libs/SystemView/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
libs/SystemView/Sample/FreeRTOSV10.4/: SEGGER_SYSVIEW_FreeRTOS.h
libs/SystemView/Sample/FreeRTOSV10.4/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
libs/include/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  stm32f4xx_hal_conf.h
libs/patches/: FreeRTOS-Plus-TCP.patch
python/: cps_plotter.py  injector_plot.py
src/: cps.cpp  logging_print.cpp  main.c  memory.ld  segger.cpp  sys_hooks.cpp  test.cpp
tuning/: speeduino.ini
